# inos

./: .gitignore  CMakeLists.txt  README.md  TODO  build_iso.sh  link.ld  makefile
arch/: CMakeLists.txt
arch/aarch64/: CMakeLists.txt
arch/x86/: CMakeLists.txt  makefile
arch/x86/boot/: boot.s  main.c  makefile  pm.s
arch/x86/include/: idt.h  io.h  irq.h  isr.h  keyboard.h  pic.h  tty.h  types.h
arch/x86/linker/: kernel.ld  link.ld
arch/x86/setup/: idt.c  idt_asm.s  io.c  irq.c  isr.c  keyboard.c  main.c  makefile  pic.c  tty.c
boot/: boot.s  setup.s
boot/grub/: boot.S
boot/include/: multiboot.h
boot/nasm/: boot.asm  main.c  setup.asm
docs/: ata.md  docs.md  index.php  pci.md  style.css
docs/html/: header-kernel.php
docs/kernel/: ext2.md
drivers/disk/: floppy.c
drivers/kbd/: ps2keyboard.c
drivers/mouse/: ps2mouse.c
kernel/: apaini.md  io.c  makefile  memory.c  stdlib.c  string.c  tty.c
kernel/arch/x86/: gdt.c  idt.c  irq.c
kernel/cpu/: gdt_flush.asm  interrupt.asm  irq.c  isr.c  reboot.c
kernel/drivers/ata/: ata.c  ide.c
kernel/drivers/mouse/: ps2mouse.c
kernel/include/: io.h  kernel.h  memory.h  stdlib.h  string.h  system.h  tty.h  types.h
kernel/include/ata/: ata.h
kernel/include/cpu/: gdt.h  idt.h  irq.h  isr.h  reboot.h
kernel/include/drivers/: drivermanager.h
kernel/include/drivers/ata/: ata.h
kernel/include/drivers/disk/: floppy.h
kernel/include/drivers/kbd/: ps2keyboard.h
kernel/include/drivers/mouse/: ps2mouse.h
kernel/init/: entry.s  main.c
linker/: link.ld
scripts/: build-binutils.sh  build-gcc.sh
